Add new graph widget

--- a/sirius/opi/new_widgets/Makefile
+++ b/sirius/opi/new_widgets/Makefile
@@ -5,8 +5,10 @@ GENERALSCRIPTS = \
 		org.csstudio.csdata_3.2.0.201506301858.jar\
 		org.csstudio.opibuilder_4.0.103.201506301920.jar\
 		org.csstudio.opibuilder.customizedSpinner_2.0.0.201512180800.jar\
+		org.csstudio.opibuilder.customizedxygraph_2.0.0.201601071124.jar\
 		org.csstudio.opibuilder.widgetExample_2.0.0.201512161402.jar\
 		org.csstudio.simplepv_1.0.0.201506301920.jar\
+		org.csstudio.swt.customizedxygraph_2.0.3.201601071024.jar\
 		org.csstudio.ui.util_4.0.0.201506301858.jar\
 		org.eclipse.core.runtime_3.10.0.v20140318-2214.jar\
 		org.eclipse.draw2d_3.9.101.201408150207.jar\
@@ -15,7 +17,6 @@ GENERALSCRIPTS = \
 		org.eclipse.ui_3.106.1.v20141002-1150.jar\
 		org.eclipse.ui.views_3.7.0.v20140408-0703.jar\
 		org.epics.vtype_2.9.1.20150630110613.jar
-
 
 SCRIPTS = $(GENERALSCRIPTS)
 
