--- a/sirius/opi/si_power_supplies/.project
+++ b/sirius/opi/si_power_supplies/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>magnets</name>
+	<name>si_power_supplies</name>
 	<comment></comment>
 	<projects>
 	</projects>
